chore: remove console.log statements and bump version to 1.0.2
- Remove all console.log statements from source files for production cleanup
- Remove unused eslint-disable directives
- Bump version from 1.0.1 to 1.0.2
- Build production-ready distribution files

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
     
     <!-- Analytics placeholder (replace with your analytics code) -->
     <script>
-      // Add your analytics code here
-      console.log('📊 Analytics placeholder - replace with your tracking code');
+      // Example: Google Analytics, Mixpanel, etc.
+      // Analytics placeholder - replace with your tracking code
     </script>
   </body>
 </html>
